[tool.poetry]
name = "quisby"
version = "0.2"
description = "Quisby is a tool to provide first view into the results from various benchmarks such as linpack, streams, fio etc."
authors = ["T K Sourab <tsourab@redhat.com>"]
homepage = "https://github.com/sourabhtk37/Quisby"

readme = 'README.md'

packages = [
    { include = "quisby"}
]


[tool.poetry.dependencies]
python = "^3.9"
google_api = "^0.1.12"
google-api-core = "^1.30.0"
google-api-python-client = "^2.9.0"
google-auth-oauthlib = "^0.4.4"
boto3 = "^1.17.97"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quisby = "quisby.quisby:main"